<resources>
    <string name="app_name">FlashCards</string>

    <!-- Exception -->
    <string name="no_internet_error">Cannot connect to internet. Please check your connection.</string>
    <string name="server_error">Cannot connect to server. Please try again later.</string>
    <string name="session_expired">Session expired. Please restart application</string>

    <!-- Vocabulary attributes -->
    <string name="label_en_title">English Title:\u0020</string>
    <string name="label_vn_title">Vietnamese Title:\u0020</string>
    <string name="label_type_word">Type:\u0020</string>
    <string name="label_context_word">Context:\u0020</string>
    <string name="label_example">Example:\u0020</string>

    <!-- No internet -->
    <string name="label_btn_reload">Reload</string>

    <!-- Layout behavior -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Tab title -->
    <string name="flashcard_title">Flash cards</string>
    <string name="progress_title">Progress</string>
    <string name="jetpack_title">Jetpack</string>
    <string name="notification_title">Notification</string>

    <!-- Technique Learned -->
    <string name="data_binding">Data Binding</string>

    <string name="run_all_tests">Run All Tests</string>

    <!-- Test Categories -->
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="category_4">Category 4</string>

    <!-- Test Types -->
    <string name="vibrator">Vibrator</string>
    <string name="speaker_and_mic">Speaker and Micro</string>
    <string name="compass">Compass</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="fake_item_1">Fake Item 1</string>
    <string name="fake_item_2">Fake Item 2</string>
    <string name="fake_item_3">Fake Item 3</string>
    <string name="fake_item_4">Fake Item 4</string>
    <string name="fake_item_5">Fake Item 5</string>
    <string name="fake_item_6">Fake Item 6</string>
    <string name="fake_item_7">Fake Item 7</string>

    <!--Common format-->
    <string name="format_percent_int">%d\%%</string>
    <string name="format_fraction">%d/%d</string>
    <string name="format_2_digit">%02d</string>
    <string name="format_int_with_dot">%d.</string>

    <string name="anchor_item_progress">88.</string>

    <!--Section progress-->
    <string name="section_all">All</string>
    <string name="section_1">Section 1</string>
    <string name="section_2">Section 2</string>
    <string name="section_3">Section 3</string>
    <string name="section_4">Section 4</string>

    <string name="result_summary">%d Passed, %d Failed, %d TBD</string>

    <!--Progress messages-->
    <string name="all_progresses_already_passed">All progresses are already passed.</string>

    <string name="label_from_server">From Server</string>
    <string name="label_from_local">From Local</string>
    <string name="get_data">Get Data</string>

    <!--Firebase Message-->
    <string name="default_notification_channel_id">01</string>
    <string name="offer_title">Title</string>
    <string name="offer_content">Content</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>

    <!--preference key-->
    <string name="pref_key_debug_mode">pref_key_debug_mode</string>
    <string name="pref_key_hide_utilities">pref_key_hide_utilities</string>
    <string name="pref_key_disable_video_upload">pref_key_disable_video_upload</string>
    <string name="pref_key_automatic_rate_video">pref_key_automatic_rate_video</string>

    <string name="pref_key_flip_camera_upside_down">pref_key_flip_camera_upside_down</string>
    <string name="pref_key_flip_ml_kit_frame">pref_key_flip_ml_kit_frame</string>

    <string name="pref_key_trust_epa">pref_key_trust_epa</string>

    <string name="pref_key_fast_mode">pref_key_fast_mode</string>

    <string name="pref_key_skip_tutorial_video">pref_key_skip_tutorial_video</string>
    <string name="pref_key_interrupt_voice">pref_key_interrupt_voice</string>
    <string name="pref_key_show_bubble_simulator">pref_key_show_bubble_simulator</string>
    <string name="pref_key_show_green_line">pref_key_show_green_line</string>
    <string name="pref_key_show_guide_shape">pref_key_show_guide_shape</string>

    <string name="pref_key_skip_test_in_order">pref_key_skip_test_in_order</string>
    <string name="pref_key_use_qr_code">pref_key_use_qr_code</string>
    <string name="pref_key_bargain_on_deny">pref_key_bargain_on_deny</string>

    <string name="pref_key_quick_tests">pref_key_quick_tests</string>

    <string name="pref_key_adjust_volume_guideline">pref_key_adjust_volume_guideline</string>
    <string name="pref_key_turn_off_lady_voice">pref_key_turn_off_lady_voice</string>
    <string name="pref_key_hide_evaluate">pref_key_hide_evaluate</string>
    <!--preference key end-->
</resources>
