<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="wordInfo"
            type="com.flashcards.flashcards.service.model.Vocabulary"
            />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/soft_yellow"
        app:cardCornerRadius="@dimen/radius_cv"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="@{wordInfo != null}"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_en_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/txt_english_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{wordInfo.englishTitle}"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_vn_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/txt_vietnamese_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{wordInfo.vietnameseTitle}"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type_word"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{wordInfo.type}"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_context_word"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/txt_context"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{wordInfo.context}"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_example"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/txt_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{wordInfo.example}"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/img_word"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_direct_to_detail"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>